break words to prevent overflow

--- a/server/public/styles/style.scss
+++ b/server/public/styles/style.scss
@@ -60,8 +60,8 @@ main {
     box-shadow: $shadow;
 
     > span {
-      width: 60%;
-      word-wrap: break-word;
+      width: 62%;
+      word-break: break-word;  
     }
 
     .deleteBtn {
@@ -69,6 +69,8 @@ main {
       display: flex;
       flex: 1;
       align-items: center;
+      align-self: flex-start;
+      padding-top: 2px;
       position: relative;
 
       img {
